# googleRankML

./: README.md  pyproject.toml  requirements.txt
RecML/: apache.bara.sky
RecML/layers/keras/: README.md  bert4rec_test.py  mamba_test.py  sasrec_test.py  utils.py
mlrx/: __init__.py
mlrx/data/: iterator.py  preprocessing.py  tf_dataset_factory.py
mlrx/metrics/: __init__.py  base_metrics.py  base_metrics_test.py  confusion_metrics.py  confusion_metrics_test.py  mean_metrics.py  mean_metrics_test.py  reduction_metrics.py  reduction_metrics_test.py  tools.py
mlrx/training/: core.py  jax.py  jax_quality_test.py  jax_test.py  optax_factory.py  optax_factory_test.py  partitioning.py  partitioning_test.py
mlrx/utils/: __init__.py  config.py  config_test.py  types.py  types_test.py
recml/: __init__.py  pytest.ini  requirements.txt
recml/.github/workflows/: unit_tests.yaml
recml/core/: __init__.py
recml/core/data/: tf_dataset_factory.py
recml/core/metrics/: __init__.py  base_metrics_test.py  confusion_metrics.py  confusion_metrics_test.py  mean_metrics.py  mean_metrics_test.py  reduction_metrics.py  reduction_metrics_test.py  tools.py
recml/core/training/: core.py  jax.py  jax_quality_test.py  jax_test.py  optax_factory.py  optax_factory_test.py  partitioning_test.py
recml/core/utils/: __init__.py  config_test.py  types_test.py
recml/layers/keras/: bert4rec.py  hstu.py  hstu_test.py  mamba.py  sasrec.py  utils_test.py
tpu/keras/: train.py
