[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RecML"
version = "0.1.1"
description = "RecML is envisioned as a high-performance, large-scale deep learning recommender system library optimized for Cloud TPUs"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]  
where = ["."]
include = ["recml*"]
